# cmd/api/docs/swagger.yaml
@@ -2580,15 +2580,18 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+            additionalProperties: true
+            type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+            additionalProperties: true
+            type: object
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+            additionalProperties: true
+            type: object
       security:
       - BearerAuth: []
       summary: Realtime metrics
@@ -2669,18 +2672,18 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+        "101":
+          description: Switching Protocols
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+            additionalProperties: true
+            type: object
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/clap_internal_shared_response.Response'
+            additionalProperties: true
+            type: object
       security:
       - BearerAuth: []
       summary: WebSocket connect
